# MCUBoot_ExFat

./: CMakeLists.txt  Kconfig  README.md  pm_static.yml  pm_static_MYOLD.yml  prj.conf  sample.yaml
boards/: nrf52840dk_nrf52840.overlay
build_dk/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  partitions.yml  pm.config
build_dk/Kconfig/: Kconfig.shield
build_dk/mcuboot/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  child_image_preload.cmake  cmake_install.cmake  compile_commands.json  shared_vars.cmake
build_dk/mcuboot/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd.dep  zephyr.elf  zephyr.hex  zephyr.map  zephyr.stat  zephyr_final.map  zephyr_pre0.elf  zephyr_pre0.map
build_dk/modules/cmsis/: cmake_install.cmake
build_dk/modules/hal_nordic/: cmake_install.cmake
build_dk/modules/mcuboot/: cmake_install.cmake
build_dk/modules/nrf/: cmake_install.cmake
build_dk/modules/nrfxlib/: cmake_install.cmake
build_dk/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dts.cmake  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  merged.hex  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  zephyr.hex  zephyr.map  zephyr.stat  zephyr_pre0.elf  zephyr_pre0.map
build_dk/zephyr/arch/: cmake_install.cmake
build_dk/zephyr/drivers/: cmake_install.cmake
build_dk/zephyr/kconfig/: sources.txt
src/: badmain.c  main.c
(+53 files in other folders)
